--- a/Mandelbrot/Mandelbrot.csproj
+++ b/Mandelbrot/Mandelbrot.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BurningShipCalculator.cs" />
+    <Compile Include="FractalCalculatorBase.cs" />
+    <Compile Include="IFractalCalculator.cs" />
     <Compile Include="MandelbrotCalculator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Result.cs" />
